added the image data and a mongodb instance

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -47,6 +47,8 @@
         {{{body}}}
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+        <script src="http://underscorejs.org/underscore-min.js"></script>
+        <script src="http://momentjs.com/downloads/moment.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/bower_components/jquery/jquery.min.js"><\/script>')</script>
         <script src="js/thetopthree.js" charset="UTF-8"></script>
     </body>
