got it working pretty good

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -13,6 +13,7 @@
         
         <!-- styles -->
         <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/thetop3.css">
         <link rel="stylesheet" type="text/css" href="/css/flatly-bootstrap.min.css">
 
         <script src="js/lib/modernizr.js"></script>
@@ -31,12 +32,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">The Top Three</a>
+            <a class="navbar-brand" href="/">The Top Three</a>
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Active</a></li>
-              <li><a href="#">Link</a></li>
+              <li></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Sign In</a></li>
