--- a/views/index.html
+++ b/views/index.html
@@ -8,29 +8,49 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
         <div class="list-group">
-            <a href="#" class="list-group-item active">Week #1</a>
+            <a href="#" class="list-group-item active">Emailed on: {{ current }}</a>
             {{#images}}
-                <a class="list-group-item">
+                <div class="list-group-item">
                     <div class="row centering">
                         <div class="col-sm-10">
-                            <img src="{{ src }}" height="100px">
+                            <a target="_blank" href="{{ src }}"><img src="{{ src }}" height="100px"></a>
                         </div>
                         <div class="col-sm-2">
-                            <button data-week="{{ week }}" data-name="{{ src }}" type="button" class="btn btn-success btn-lg pull-right choose">Choose</button>
+                            <button data-week="{{ date }}" data-name="{{ src }}" type="button" class="btn btn-success btn-lg pull-right choose">Choose</button>
                         </div>
                     </div>
-                </a>
+                </div>
             {{/images}}
         </div>
     </div>
 </div>
+
 <div class="text-center">
     <button type="button" class="btn btn-warning btn-lg send-email">Submit</button>
+    <br>
+    <br>
 </div>
-<div class="row">
-    <ul>
-        {{#dates}}
-            <li class="paginate"><a href="/?date_emailed={{ . }}">{{ . }}</a></li>
-        {{/dates}}
-    </ul>
+
+<div class="row text-center">
+    {{#prev}}
+        {{#if isfirst }}
+            <a href="#">Previous</a>
+        {{else}}
+            <a href="/?date_emailed={{ . }}">Previous</a>
+        {{/if}}
+    {{/prev}}
+    
+        <div class="btn-group">
+            {{#pagination}}
+                <a class='btn btn-default' href="/?date_emailed={{ this.[1] }}">{{ this.[0] }}</a>
+            {{/pagination}}
+        </div>
+    {{#next}}
+        {{#if islast }}
+            <a href="#">Next</a>
+        {{else}}
+            <a href="/?date_emailed={{ . }}">Next</a>
+        {{/if}}
+    {{/next}}
 </div>
+
